package app.entities;

public enum Role {
    USER, SALESPERSON, ADMIN
}
