@startuml

skinparam classAttributeIconSize 0

title Domain Model - Carport

class User {
    - int id
    - String email
    - String password
    - String firstName
    - String lastName
    - String phone
    - String address
    - int zipcode
    - String city
    - String role
}

class Zipcode {
    - String zip
    - String city
}

class Order {
    - int id
    - int userId
    - int carportId
    - String status
    - LocalDateTime createdAt
    - double totalPrice
    - double basePrice
    - double discountPercent
    - double discountAmount
    - boolean isPaid
    - String remarks
}

class Carport {
    - int id
    - int width
    - int length
    - int height
    - String roofMaterial
    - boolean hasShed
    - int shedWidth
    - int shedLength
}

class Shed {
    - int id
    - int width
    - int length
}

class Roof {
    - int id
    - String roofStyle = "flat"
    - String roofCovering
    - double price
}

class Material {
    - int id
    - String name
    - String unit
    - double price
}

class MaterialLine {
    - String name
    - String dimensions
    - int quantity
    - String unit
    - String description
    - double unitPrice
    + double getTotalPrice()
}

enum Role {
    customer
    salesperson
    admin
}

enum OrderStatus {
    pending
    offer
    approved
    rejected
    completed
}

enum RoofCovering {
    none
    plastic_trapez
}

Zipcode "1" -- "0..*" User : has residents
User "1" -- "0..*" Order : has orders
Order "1" -- "1" Carport : has carport
Carport "1" -- "1" Roof : has roof
Carport "1" -- "0..1" Shed : has shed
Carport "1" -- "0..*" MaterialLine : has material lines
Material "1" -- "0..*" MaterialLine : used in

User --> Role : has role
Order --> OrderStatus : has status
Roof --> RoofCovering : has covering

note right of Roof
  RoofStyle is always "flat".
  The user only chooses roof covering/material.
end note

note right of Shed
  Shed exists only when
  Carport.hasShed is true.
end note

note bottom of MaterialLine
  MaterialLine represents a calculated line
  in the bill of materials/stykliste.
end note

@enduml